# Supportify-AI

./: BranchOS_PROJECT_BRIEF.md  README.md  n8n_workflow.json
backend/: .env.example  .gitignore  README.md  check_db.py  list_models.py  pyproject.toml  run_process_message.py  test_model.py
backend/alembic/: env.py
backend/alembic/versions/: abc123order001_add_location_tracking_delivery_dates_and_order_items.py  ad64465887c3_initial_migration.py  cd511c28d326_add_telegram_id_to_users.py  d86a078c4d56_initial_migration.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/db/: database.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: ai_service.py  order_service.py
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: index.js
frontend/src/components/: Badge.jsx  DataTable.jsx  Header.jsx  Modal.jsx  Sidebar.jsx  Skeleton.jsx  StatCard.jsx
frontend/src/hooks/: useFetch.js
frontend/src/pages/: Conversations.jsx  Dashboard.jsx  Orders.jsx  Products.jsx  Users.jsx
